--- a/_posts/2021-09-06-6-aws.md
+++ b/_posts/2021-09-06-6-aws.md
@@ -13,7 +13,7 @@ date: 2021-09-06
 last_modified_at: 2021-09-06
 ---
 
-`Amazon Web Service`에서 웹 구축
+`Amazon Web Service`에서 웹 구축, 현재 쓰는 중
 
 # IAM 계정
 
