--- a/_posts/2021-09-06-4-binding.md
+++ b/_posts/2021-09-06-4-binding.md
@@ -1,5 +1,5 @@
 ---
-title: \[P:Simple-crawling\] Binding
+title: \[P:Simple-crawling\] 바인딩
 
 categories:
   - Simple-crawling
@@ -18,4 +18,41 @@ last_modified_at: 2021-09-06
 
 함수를 작성했습니다.
 
-그런데, 함수 안에서 
+그런데, 함수 안에서 값을 반환하고 그걸 매개변수로 다른 함수에 넣는 방식으로 작성하니 멋있지도 않고 효율적으로 보이지도 않았습니다.
+
+그래서 얼마 전 공부했었던 `바인딩`을 이용해보기로 맘을 먹었습니다.
+
+# 바인딩
+
+그래서 바인딩이 뭘까요? 
+
+어떤 `Object`가 함수의 `Context Object`가 되는 것입니다.
+즉, 함수 안의 `this`를 어떤 `Object`와 연결시킨다고 해서 컨텍스트 바인딩입니다!
+
+따라서 `this`는 `Object`를 참조하는 키워드입니다.
+
+## 기본 바인딩
+
+```js
+function foo() {
+  console.log(this); 
+}
+
+foo();
+```
+
+## 암시적 바인딩
+
+## 명시적 바인딩
+
+## new 바인딩
+
+# 고민
+
+저는 대부분의 함수를 ES6의 `Arrow function`을 사용해왔었습니다. 그래서 일반적인 함수 선언에 대한 편견이 있었고, 그걸 사용한다는 것에 거부감도 들었던 것 같습니다.
+
+
+
+# 참고 자료
+
+[jeonghwan님의 블로그](https://jeonghwan-kim.github.io/2017/10/22/js-context-binding.html)  
