--- a/_posts/2021-09-06-6-aws.md
+++ b/_posts/2021-09-06-6-aws.md
@@ -26,9 +26,86 @@ last_modified_at: 2021-09-06
 
 ## VPC
 
-> AWS  Cloud 내부에서 구성되는 사용자의 AWS 계정 전용 가상 네트워크로 이곳에서 AWS 리소스를 시작할 수 있습니다. 
+> AWS Cloud 내부에서 구성되는 사용자의 AWS 계정 전용 가상 네트워크로 이곳에서 AWS 리소스를 시작할 수 있습니다.
+
+## Subnet
+
+## 
 
 
+# AWS 계정, IAM 유저
+
+## IAM 유저
+> AWS 리소스에 대한 접근을 안전하게 제어할 수 있는 웹 서비스.  
+  IAM을 사용하여 리소스를 사용하도록 인증 및 권한 부여된 대상을 제어.
+
+# 네트워크 구성
+**VPC**, **Subnets**, **Route Tables**, **Internet Gateways** 등 ...
+
+**Route Tables**  
+ - Ip Address에 Routing 경로를 정의.  
+ - Subnet에서 밖으로 나가는 Outbound traffic에 대한 Routing 경로를 설정.  
+ - Public Subnet을 위한 Route Table, Private Subnet을 위한 Route Table.  
+
+**Internet Gateways**
+ - VPC의 Instance와 Internet 간에 통신할 수 있게 해준다.
+
+
+# NAT 서버 구축
+ Instance, Elastic IPs
+
+## NAT 서버
+
+ `NAT 서버`는 Private Subnet 내의 Web Server들이 외부로 통신을 하기 위해서 NAT 서버를 Public Subnet 안에 구축하여 외부로 통신할 수 있도록 합니다.
+
+## Instance
+
+1. AMI(Amazon Machine Image)
+2. Instance Type
+3. Configure Instance Details
+4. Storage
+5. Tags
+6. Security Group  
+    - SSH: Source(Custom: 0.0.0.0/0),  
+    - All traffic: Source(Custom: VPC 대역대),  
+    - Custom UDP...: Port Range(1194), Source(Anywhere)  
+7. Review
+8. Key-Pair
+    - Create a new key pair  
+    - key pair name: vpcNameKey
+9. Elastic IPs
+    - Actions - Associate address
+    - Resource type: Instance
+    - ...
+10. Route Tables: NAT Instance 주소를 Private Subnet을 위한 Route에 연결.
+    - Destination: 0.0.0.0/0
+    - Target: Network interface ID
+
+# Putty
+ OpenVPN?, 
+
+1. OpenVPN 설치?
+2. NAT Instance를 생성할 때 다운받은 .pem파일을 .ppk로 변환(puttygen)
+    - PuttyGen
+    - Type of key to generate: SSH-1 (RSA)
+    - Load - .pem Open - Save private key
+3. NAT Instance에 접속(Putty)
+    - Host Name: Elastic IP(NAT Instace)
+    - Connection - SSH - Auth - Browse.. - .ppk
+    - login as: ec2-user
+
+# Web Server(Apache) 구축
+ Private Subnet 안에 Web Server 역할을 할 수 있는 Instance 구축.
+
+
+# 그 외
+
+## AWS Lambda
+ `서버리스`는 별도의 서버 인프라 없이 서비스 구축하는 아키텍처입니다.
+ 
+ 외부 서비스에 사용하려면 `API Gateway 서비스` 이용.
+ `API Gateway`는 일종의 웹서버나 웹 프레임워크의 URL Route 역할을 수행.
+ Restful 방식의 Open API 호출 기능을 할 수 있는데.
 
 # 참고 자료
 
